nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: code-server-np
  namespace: codercom
  labels:
    app: codeserver-service
spec:
  selector:
    app: codeserver
  type: NodePort
  ports:
  - name: code-server
    protocol: TCP
    port: 8080
    targetPort: 8080
