web-ingress.yml
# Author: Billy Lieberman <wlieberman@gmail.com>
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: code-server-ingress
  namespace: codercom
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: code.billylieberman.com # Update this value to reflect the fqdn of your site
      http:
        paths:
          - path: /
            backend:
              serviceName: code-server-np
              servicePort: 8080
